Fix a white gap between canvas and sidebar

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -46,7 +46,7 @@
 }
 
 #document-container.sidebar-open {
-	width: calc(100vw - 351px);
+	width: calc(100vw - 338px);
 }
 
 #document-container.presentation-doctype.sidebar-open {
